--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,14 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+         registry: docker.io
+         username: ${{ secrets.DOCKERHUB_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
+
+
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
